--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <section class="container">
       <div class="section-box">
         <h2 class="mb-3">Contact</h2>
-        <p>Email: <a href="mailto:dimas@example.com">dimas@example.com</a></p>
-        <p>LinkedIn: <a href="#">linkedin.com/in/dimasaditia</a></p>
+        <p>Email: <a href="">dimasadityasaputrasaputra@.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/feed/">linkedin.com/in/dimasaditia</a></p>
       </div>
     </section>
 
