--- a/index.html
+++ b/index.html
@@ -3,33 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
     <title>My Profile</title>
     <style>
       body {
         background-color: #e9f5ec;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         color: #2e4e3f;
+        margin: 0;
+        padding: 0;
       }
 
-      .profile-img {
-        width: 150px;
-        height: 150px;
-        object-fit: cover;
-        border-radius: 50%;
-        border: 4px solid #ffffff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-
-      .bg-header {
+      header {
         background-color: #2e4e3f;
         color: #f5f5f5;
-        padding: 60px 0;
+        text-align: center;
+        padding: 60px 20px;
+      }
+
+      header h1 {
+        margin: 0;
+        font-size: 2.5em;
+      }
+
+      header p {
+        font-size: 1.2em;
+        margin-top: 10px;
+      }
+
+      .container {
+        max-width: 800px;
+        margin: 40px auto;
+        padding: 0 20px;
       }
 
       .section-box {
@@ -40,36 +44,50 @@
         margin-bottom: 30px;
       }
 
-      h1,
       h2 {
         font-weight: 600;
+        margin-bottom: 15px;
+      }
+
+      ul {
+        list-style-type: disc;
+        padding-left: 20px;
+      }
+
+      ul li {
+        margin-bottom: 8px;
       }
 
       a {
         color: #3a7d44;
+        text-decoration: none;
       }
 
       a:hover {
         color: #2c5f32;
-        text-decoration: none;
+        text-decoration: underline;
       }
 
       footer {
         background-color: #2e4e3f;
+        color: white;
+        text-align: center;
+        padding: 20px;
+        font-size: 0.9em;
       }
     </style>
   </head>
   <body>
     <!-- Header -->
-    <header class="bg-header text-center">
-      <h1 class="display-4">Dimas Aditia Saputra</h1>
-      <p class="lead">Web Developer | Cybersecurity Enthusiast</p>
+    <header>
+      <h1>Dimas Aditia Saputra</h1>
+      <p>Web Developer | Cybersecurity Enthusiast</p>
     </header>
 
     <!-- About Section -->
-    <section class="container mt-5">
+    <div class="container">
       <div class="section-box">
-        <h2 class="mb-3">About Me</h2>
+        <h2>About Me</h2>
         <p>
           Hello! I’m Dimas, a passionate developer currently focused on backend
           and cybersecurity. I love solving problems, building useful
@@ -77,47 +95,29 @@
           especially in the world of ethical hacking and system security.
         </p>
       </div>
-    </section>
 
-    <!-- Skills Section -->
-    <section class="container">
+      <!-- Skills Section -->
       <div class="section-box">
-        <h2 class="mb-3">Skills</h2>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Java, PHP, JavaScript</li>
-          <li class="list-group-item">MySQL</li>
-          <li class="list-group-item">
-            Cybersecurity (basic pentesting & CTF)
-          </li>
-          <li class="list-group-item">Git & Version Control</li>
+        <h2>Skills</h2>
+        <ul>
+          <li>Java, PHP, JavaScript</li>
+          <li>MySQL</li>
+          <li>Cybersecurity (basic pentesting & CTF)</li>
+          <li>Git & Version Control</li>
         </ul>
       </div>
-    </section>
 
-    <!-- Contact Section -->
-    <section class="container">
+      <!-- Contact Section -->
       <div class="section-box">
-        <h2 class="mb-3">Contact</h2>
-        <p>Email: <a href="">dimasadityasaputrasaputra@.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/feed/">linkedin.com/in/dimasaditia</a></p>
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:dimas@example.com">dimas@example.com</a></p>
+        <p>LinkedIn: <a href="#">linkedin.com/in/dimasaditia</a></p>
       </div>
-    </section>
+    </div>
 
     <!-- Footer -->
-    <footer class="text-white text-center py-3">
+    <footer>
       &copy; 2025 Dimas Aditia Saputra. All rights reserved.
     </footer>
-
-    <!-- Scripts -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
